<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.klaib.adham.adhamshoppinglist.AddItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.08">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ETNAME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ETAMOUNT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/ETUNITS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:ems="10"
                android:hint="@string/units"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ETPRICE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textPersonName" />

            <ImageButton
                android:id="@+id/IBTNIMAGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/BTNSAVE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
